# simgine

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: dependencies.yml  main.yml
app/: Cargo.toml
app/src/: cli.rs  main.rs  window_name.rs
core/: Cargo.toml
core/src/: asset_manifest.rs  city.rs  clock.rs  component_res.rs  cursor.rs  cursor_follower.rs  error_event.rs  family_editor.rs  game_paths.rs  game_speed.rs  game_time.rs  ghost.rs  layer.rs  lib.rs  network.rs  object.rs  outline.rs  player_camera.rs  preview.rs  sky.rs  speed.rs  state.rs  time.rs  tint.rs  undo.rs  world.rs
core/src/asset_manifest/: object.rs  reflected_component.rs
core/src/cursor/: caster.rs  follower.rs  outline.rs
core/src/object/: cursor_follower.rs  moving.rs  placing.rs
core/src/object/placing/: moving.rs  spawning.rs
core/src/undo/: client_command.rs  history.rs  request.rs
core/src/world/: character.rs  city.rs  combined_collider.rs  cursor.rs  family.rs  layer.rs  object.rs  placing.rs  player_camera.rs  preview.rs  sky.rs  time.rs
core/src/world/cursor/: caster.rs  follower.rs  outline.rs
core/src/world/object/: placing.rs
core/src/world/object/placing/: moving.rs  spawning.rs
core/src/world/placing/: intersection.rs  tint.rs
core/src/world/time/: speed.rs
ui/: Cargo.toml
ui/src/: action_button.rs  building_mode_panel.rs  button_action.rs  connection_dialog.rs  error_dialog.rs  family_mode_panel.rs  hud.rs  lib.rs  menu.rs  preview.rs  thumbnail.rs  time_panel.rs  utils.rs  widget.rs
ui/src/hud/: family.rs
ui/src/hud/family/: building.rs  life.rs
ui/src/hud/family/building/: objects.rs  toolbar.rs
ui/src/hud/family/life/: time.rs
ui/src/menu/: camera.rs  main_menu.rs  pause_menu.rs
ui/src/menu/main_menu/: world_browser.rs
ui/src/menu/main_menu/world_browser/: world_nodes.rs
ui/src/menu/pause_menu/: multiplayer.rs
ui/src/widget/: button.rs  dialog.rs  focus.rs  text_edit.rs  theme.rs
ui/src/widget/button/: action.rs  exclusive_group.rs  icon.rs  style.rs  toggled.rs
