[workspace]
resolver = "2"
members = ["core", "ui", "app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "Irina Chernyshchyk <irina.kdr@gmail.com>",
]
repository = "https://github.com/simgine/simgine"
publish = false

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
bevy_enhanced_input = "0.22"
bevy_simple_text_input = "0.13"
bevy_replicon = "0.38.0"
bevy_replicon_renet = { git = "https://github.com/simgine/bevy_replicon_renet", branch = "bevy-0.18" }
simgine_core = { path = "core" }
simgine_ui = { path = "ui" }
clap = { version = "4.5", features = ["derive"] }
ron = "0.12"
serde = "1.0"
walkdir = "2.5"
directories = "6.0"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"

[profile.dev.package."*"]
opt-level = 3
