[workspace]
resolver = "2"
members = ["core", "ui", "app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "Irina Chernyshchyk <irina.kdr@gmail.com>",
]
repository = "https://github.com/simgine/simgine"
publish = false

[workspace.dependencies]
avian3d = { version = "0.7", default-features = false, features = [
  "3d",
  "parry-f32",
  "collider-from-mesh",
] }
bevy = { version = "0.19", default-features = false }
bevy_enhanced_input = "0.26"
bevy_mod_outline = { git = "https://github.com/komadori/bevy_mod_outline" }
bevy_replicon = "0.41"
bevy_replicon_renet = "0.17"
smallvec = "1.15"
simgine_core = { path = "core" }
simgine_ui = { path = "ui" }
test-log = { version = "0.2", features = ["trace"] }
clap = { version = "4.6", features = ["derive"] }
ron = "0.12"
serde = "1.0"
trash = { version = "5.2.6", default-features = false }
walkdir = "2.5"
directories = "6.0"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"

[profile.dev.package."*"]
opt-level = 3
