[package]
name = "simgine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "default_app",
  "wayland",
  "multi_threaded",
  "3d_bevy_render",
  "ui_bevy_render",
] }
bevy_enhanced_input.workspace = true
simgine_core.workspace = true
simgine_ui.workspace = true

[features]
default = ["dev"]
dev = ["bevy/debug", "bevy/dynamic_linking"]

[lints]
workspace = true
