[package]
name = "simgine_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_core_pipeline",
  "bevy_light",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_state",
  "bevy_log",
] }
serde.workspace = true
bevy_enhanced_input.workspace = true
walkdir.workspace = true
ron.workspace = true
