[package]
name = "simgine_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_core_pipeline",
  "bevy_light",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_state",
  "bevy_log",
] }
bevy_enhanced_input.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
ron.workspace = true
serde.workspace = true
walkdir.workspace = true
directories.workspace = true

[lints]
workspace = true
