[package]
name = "simgine_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
avian3d.workspace = true
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_core_pipeline",
  "bevy_light",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_state",
  "bevy_log",
] }
bevy_enhanced_input.workspace = true
bevy_mod_outline.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
ron.workspace = true
serde.workspace = true
smallvec.workspace = true
walkdir.workspace = true
directories.workspace = true

[dev-dependencies]
test-log.workspace = true

[lints]
workspace = true
