[package]
name = "simgine_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "bevy_ui",
  "ui_picking",
  "default_font",
] }
bevy_enhanced_input.workspace = true
simgine_core.workspace = true

[lints]
workspace = true
